feat: rename CLI package and update requirements; add classification and example data

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "synthlang-cli"
+name = "synthlang"
 version = "0.1.0"
 description = "Command-line interface for the SynthLang framework using DSPy"
 authors = ["SynthLang Team"]
