Refactor configuration management to load settings from environment variables and update SynthLang integration options

--- a/proxy/.env.sample
+++ b/proxy/.env.sample
@@ -12,12 +12,8 @@ DEBUG=false
 ENCRYPTION_KEY=
 
 # Database Configuration
-# PostgreSQL
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=synthlang_proxy
+# PostgreSQL connection URL (required)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/synthlang_proxy
 
 # For development/testing, you can use SQLite instead
 USE_SQLITE=0
@@ -28,17 +24,21 @@ DEBUG_SQL=0
 
 # Rate Limiting
 # Default rate limits (requests per minute)
-DEFAULT_RATE_LIMIT=60
+DEFAULT_RATE_LIMIT_QPM=60
 PREMIUM_RATE_LIMIT=120
 
 # SynthLang Integration
-# Path to SynthLang CLI executable
-SYNTHLANG_PATH=synthlang
 # Enable/disable SynthLang compression (set to 0 to disable)
-ENABLE_SYNTHLANG=1
+USE_SYNTHLANG=1
+
+# PII Masking Configuration
+# Mask PII before sending to LLM (set to 1 to enable)
+MASK_PII_BEFORE_LLM=0
+# Mask PII in logs and database (set to 0 to disable)
+MASK_PII_IN_LOGS=1
 
 # LLM Provider Configuration
-# OpenAI API key
+# OpenAI API key (required)
 OPENAI_API_KEY=
 # Default model to use
 DEFAULT_MODEL=gpt-4o
