--- a/proxy/src/cli/pyproject.toml
+++ b/proxy/src/cli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "synthlang"
-version = "0.1.4"
+version = "0.2.0"
 description = "Command-line interface for the SynthLang framework using DSPy"
 authors = ["SynthLang Team"]
 readme = "README.md"
@@ -13,6 +13,12 @@ click = "^8.1.7"
 python-dotenv = "^1.0.0"
 pydantic = "^2.5.2"
 rich = "^13.7.0"
+fastapi = "^0.104.1"
+uvicorn = "^0.23.2"
+sqlalchemy = "^2.0.23"
+cryptography = "^41.0.5"
+httpx = "^0.25.1"
+python-jose = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
