--- a/proxy/requirements.txt
+++ b/proxy/requirements.txt
@@ -1,13 +1,15 @@
-fastapi>=0.95.0,<0.96.0
-uvicorn>=0.22.0,<0.23.0
-pydantic>=2.0.0,<3.0.0
-pytest>=7.3.1,<7.4.0
-httpx>=0.24.0,<0.25.0
-python-multipart>=0.0.6,<0.0.7
-python-dotenv>=1.0.0,<1.1.0
-cryptography>=41.0.0,<42.0.0
-faiss-cpu>=1.7.4,<1.8.0
-numpy>=1.24.0,<1.25.0
-sqlalchemy>=2.0.0,<2.1.0
-asyncpg>=0.27.0,<0.28.0
+fastapi>=0.104.1,<0.105.0
+uvicorn>=0.23.2,<0.24.0
+pydantic>=2.6.0,<3.0.0
+pytest>=8.0.0,<8.1.0
+httpx>=0.25.1,<0.26.0
+python-multipart>=0.0.9,<0.1.0
+python-dotenv>=1.0.1,<1.1.0
+cryptography>=41.0.7,<42.0.0
+faiss-cpu
+numpy>=1.26.0,<1.27.0
+sqlalchemy>=2.0.25,<2.1.0
+asyncpg>=0.29.0,<0.30.0
 aiosqlite>=0.19.0,<0.20.0
+openai
+tomli>=2.0.0,<3.0.0
