--- a/proxy/requirements.txt
+++ b/proxy/requirements.txt
@@ -16,3 +16,4 @@ openai>=1.10.0,<2.0.0
 tomli>=2.0.0,<3.0.0
 tomli_w>=1.0.0,<2.0.0
 scikit-learn>=1.3.0,<1.4.0  # Alternative to faiss for vector similarity
+litellm>=1.22.0
